mbl stretching fixed

--- a/style.css
+++ b/style.css
@@ -83,6 +83,18 @@ body {
     width: 100%; height: 100%;
     z-index: -2;
 }
+
+#bgVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1; /* Keeps it behind the content */
+    object-fit: cover; /* KEY FIX: This stops the stretching */
+}
 /* TIMER WRAPPER to hold arrows and numbers in a line */
 .timer-wrapper {
     display: flex;
